// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/radar/RadarAnimation should render correctly with bottom-center positioning 1`] = `
<TetherComponent
  attachment="top center"
  classPrefix="radar-animation"
  constraints={
    Array [
      Object {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  renderElementTag="div"
  renderElementTo={null}
  targetAttachment="bottom center"
>
  <div
    aria-describedby="radarAnimation1"
  >
    Hello
  </div>
  <div
    className="radar "
    id="radarAnimation1"
  >
    <div
      className="radar-dot"
    />
    <div
      className="radar-circle"
    />
  </div>
</TetherComponent>
`;

exports[`components/radar/RadarAnimation should render correctly with bottom-left positioning 1`] = `
<TetherComponent
  attachment="top left"
  classPrefix="radar-animation"
  constraints={
    Array [
      Object {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  renderElementTag="div"
  renderElementTo={null}
  targetAttachment="bottom left"
>
  <div
    aria-describedby="radarAnimation2"
  >
    Hello
  </div>
  <div
    className="radar "
    id="radarAnimation2"
  >
    <div
      className="radar-dot"
    />
    <div
      className="radar-circle"
    />
  </div>
</TetherComponent>
`;

exports[`components/radar/RadarAnimation should render correctly with bottom-right positioning 1`] = `
<TetherComponent
  attachment="top right"
  classPrefix="radar-animation"
  constraints={
    Array [
      Object {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  renderElementTag="div"
  renderElementTo={null}
  targetAttachment="bottom right"
>
  <div
    aria-describedby="radarAnimation3"
  >
    Hello
  </div>
  <div
    className="radar "
    id="radarAnimation3"
  >
    <div
      className="radar-dot"
    />
    <div
      className="radar-circle"
    />
  </div>
</TetherComponent>
`;

exports[`components/radar/RadarAnimation should render correctly with middle-center positioning 1`] = `
<TetherComponent
  attachment="middle center"
  classPrefix="radar-animation"
  constraints={
    Array [
      Object {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  renderElementTag="div"
  renderElementTo={null}
  targetAttachment="middle center"
>
  <div
    aria-describedby="radarAnimation4"
  >
    Hello
  </div>
  <div
    className="radar "
    id="radarAnimation4"
  >
    <div
      className="radar-dot"
    />
    <div
      className="radar-circle"
    />
  </div>
</TetherComponent>
`;

exports[`components/radar/RadarAnimation should render correctly with middle-left positioning 1`] = `
<TetherComponent
  attachment="middle right"
  classPrefix="radar-animation"
  constraints={
    Array [
      Object {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  renderElementTag="div"
  renderElementTo={null}
  targetAttachment="middle left"
>
  <div
    aria-describedby="radarAnimation5"
  >
    Hello
  </div>
  <div
    className="radar "
    id="radarAnimation5"
  >
    <div
      className="radar-dot"
    />
    <div
      className="radar-circle"
    />
  </div>
</TetherComponent>
`;

exports[`components/radar/RadarAnimation should render correctly with middle-right positioning 1`] = `
<TetherComponent
  attachment="middle left"
  classPrefix="radar-animation"
  constraints={
    Array [
      Object {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  renderElementTag="div"
  renderElementTo={null}
  targetAttachment="middle right"
>
  <div
    aria-describedby="radarAnimation6"
  >
    Hello
  </div>
  <div
    className="radar "
    id="radarAnimation6"
  >
    <div
      className="radar-dot"
    />
    <div
      className="radar-circle"
    />
  </div>
</TetherComponent>
`;

exports[`components/radar/RadarAnimation should render correctly with top-center positioning 1`] = `
<TetherComponent
  attachment="bottom center"
  classPrefix="radar-animation"
  constraints={
    Array [
      Object {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  renderElementTag="div"
  renderElementTo={null}
  targetAttachment="top center"
>
  <div
    aria-describedby="radarAnimation7"
  >
    Hello
  </div>
  <div
    className="radar "
    id="radarAnimation7"
  >
    <div
      className="radar-dot"
    />
    <div
      className="radar-circle"
    />
  </div>
</TetherComponent>
`;

exports[`components/radar/RadarAnimation should render correctly with top-left positioning 1`] = `
<TetherComponent
  attachment="bottom left"
  classPrefix="radar-animation"
  constraints={
    Array [
      Object {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  renderElementTag="div"
  renderElementTo={null}
  targetAttachment="top left"
>
  <div
    aria-describedby="radarAnimation8"
  >
    Hello
  </div>
  <div
    className="radar "
    id="radarAnimation8"
  >
    <div
      className="radar-dot"
    />
    <div
      className="radar-circle"
    />
  </div>
</TetherComponent>
`;

exports[`components/radar/RadarAnimation should render correctly with top-right positioning 1`] = `
<TetherComponent
  attachment="bottom right"
  classPrefix="radar-animation"
  constraints={
    Array [
      Object {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  renderElementTag="div"
  renderElementTo={null}
  targetAttachment="top right"
>
  <div
    aria-describedby="radarAnimation9"
  >
    Hello
  </div>
  <div
    className="radar "
    id="radarAnimation9"
  >
    <div
      className="radar-dot"
    />
    <div
      className="radar-circle"
    />
  </div>
</TetherComponent>
`;
